[project]
name = "run-google-java-format"
version = "0.1.0"
description = "Scripts to download, run, and check google-java-format, with formatting improvements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pymarkdownlnt>=0.9.33",
    "ty>=0.0.1a31",
]
